css 1부분 font-color 변경

--- a/interiorshop01/src/main/webapp/resources/css/main.css
+++ b/interiorshop01/src/main/webapp/resources/css/main.css
@@ -522,7 +522,7 @@ footer img {
 
 
 .detail_table table td.fixed_join {
-	width: 110px; font-weight: bold; color: #0000cc;background:  #e1e1ff;
+	width: 110px; font-weight: bold; background:  #e1e1ff;
 }
 
 .detail_table ul {
